# RTX-experiments

./: .gitmodules  CMakeLists.txt  CudaTest.cu  CudaTest.cuh  NativeTest.cpp  cuda_test.cu  cuda_test.cuh  main.cpp  native_test.cpp  native_test.hpp  render.cpp  render.hpp  test.cpp  test.hpp  utils.hpp
glad/: CMakeLists.txt
renderer/: Aliases.hpp  BaseRender.cpp  BaseRender.hpp  CMakeLists.txt  Camera.cpp  Camera.cu  Camera.hpp  CudaRender.cu  CudaRender.cuh  CudaUtils.cuh  Hit.cpp  Hit.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  NativeRender.cpp  NativeRender.hpp  Ray.cpp  Ray.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Utils.cpp  Utils.hpp
